--- a/2022/11.md
+++ b/2022/11.md
@@ -1,18 +1,18 @@
 ## 2022-11-09
 
 1. 컴포넌트 플러그인화. 
- - src 밑에 plugins 폴더를 만든다.
+ - `src` 밑에 `plugins` 폴더를 만든다.
  - 폴더 아래에 공통화할 컴포넌트 플러그인파일을 만든다.
- - main.js 에서 `Vue.use` 를 이용해 플러그인을 등록시켜준다.
+ - `main.js` 에서 `Vue.use` 를 이용해 플러그인을 등록시켜준다.
 
 이렇게 할시 매번 import 할 필요 없이 사용할 수 있음.
 
-2. Netlify를 이용하여 배포
+2. `Netlify` 를 이용하여 배포
 
 [https://www.netlify.com/](https://www.netlify.com/) 네트리파이라고도 부름.
 
-- Netlify는 웹 애플리케이션 및 동적 웹사이트를 위한 구축.
-- 필요한 레파지토리를 import 한 뒤,  build Settings 를 해주면 됨.
+- `Netlify` 는 웹 애플리케이션 및 동적 웹사이트를 위한 구축.
+- 필요한 레파지토리를 `import` 한 뒤, `build Settings` 를 해주면 됨.
 ```
 Base directory: vue-news
 
@@ -20,7 +20,7 @@ Build command: npm run build
 
 Publish directory: vue-news/dist
 ```
-정상적으로 완료시에 Preview 가 나올것임.
+정상적으로 완료시에 `Preview` 가 나올것임.
 
 **중요: SPA 호스팅시에 다른 url 로 이동하면 404 가 나오는데, 리다이렉션 할 수 있는 파일을 추가해주어야함. (각각 웹서버마다 설정해주어야 함.)**
 
@@ -43,7 +43,7 @@ export default {
 
 ## 2022-11-08
 
-1. ref 를 이용하여 Vue 에서 Dom 접근
+1. `ref` 를 이용하여 `Vue` 에서 `Dom` 접근
 
 ```html
 <canvas ref="BarChart" id="BarChart" width="400" height="400"></canvas>
@@ -53,12 +53,12 @@ this.$refs.BarChart
 ```
 ## 2022-11-07
 
-1. Vue 에서의 데이터 호출 시점
- - 뷰 라이프 사이클 훅을 이용하여 created 에서 데이터를 호출
+1. `Vue` 에서의 데이터 호출 시점
+ - 뷰 라이프 사이클 훅을 이용하여 `created` 에서 데이터를 호출
  - 라우터 네비게이션 가드를 사용해서 데이터를 호출할 수 있음.
 
 라우터 네비게이션 가드 사용시에는 페이지 URL 로 접근 전에 어떠한 행위를 하는 것으로, 화면이 깔끔하게 나올 수 있지만, 사용자 UX 를 고려해서 로딩바, 스피너를 넣어줘야함. <br/>
-created 사용시에는 화면에 빨리 뜨지만, 깔끔하지 않을 수도 있음.
+`created` 사용시에는 화면에 빨리 뜨지만, 깔끔하지 않을 수도 있음.
 
 ```js
 // 전역가드
@@ -130,7 +130,7 @@ export default function createListView(name) {
 ```
 
 2. 이벤트 버스
- - 예를 들어, 스피너 컴포넌트가 있다. 해당 스피너 컴포넌트에서 emit 을 이용하여 상위로 이벤트를 날릴 수도 있지만, 이벤트 버스를 이용해 이벤트를 전달할 수 있음.
+ - 예를 들어, 스피너 컴포넌트가 있다. 해당 스피너 컴포넌트에서 `emit` 을 이용하여 상위로 이벤트를 날릴 수도 있지만, 이벤트 버스를 이용해 이벤트를 전달할 수 있음.
 
 ```js
 // bus.js
@@ -175,11 +175,11 @@ created() {
 ## 2022-11-04
 
 1. 2가지 데이터 흐름 처리
- - vuex 를 이용한 흐름처리로 actions 에 처리한 데이터는 state 로 존재하기 때문에 props 를 사용하지 않고 getters 를 이용하여 처리할 수 있음.
- - 공통 컴포넌트에 대해 각 views 에 props 를 전달하여 처리할 수 있음.
-2. slot 을 이용하여 간단하게 컴포넌트를 공통화 처리 밑 교통정리 가능.
- - 기존에는 내부에서 v-if 를 사용해서 처리했는데 그러다보니 코드량이나 if 문이 너무 많아지는 것을 확인함.
- - slot 을 이용하여 교통정리가 가능하고 각 뷰에서 필요한 데이터를 받아서 나타낼 수 있음.
+ - `vuex` 를 이용한 흐름처리로 `actions` 에 처리한 데이터는 `state` 로 존재하기 때문에 `props` 를 사용하지 않고 `getters` 를 이용하여 처리할 수 있음.
+ - 공통 컴포넌트에 대해 각 `views` 에 `props` 를 전달하여 처리할 수 있음.
+2. `slot` 을 이용하여 간단하게 컴포넌트를 공통화 처리 밑 교통정리 가능.
+ - 기존에는 내부에서 `v-if` 를 사용해서 처리했는데 그러다보니 코드량이나 if 문이 너무 많아지는 것을 확인함.
+ - `slot` 을 이용하여 교통정리가 가능하고 각 뷰에서 필요한 데이터를 받아서 나타낼 수 있음.
 
 **예시**
  ```html
@@ -211,10 +211,10 @@ created() {
 
 ## 2022-11-03
 
-1. v-html, v-text 은 innerHTML 과 innerText 와 같음.
-v-html 의 경우, innerHTML 과 마찬가지로 xss 에 취약하기 때문에 주의해서 사용.
+1. `v-html, v-text` 은 `innerHTML` 과 `innerText` 와 같음.
+`v-html` 의 경우, `innerHTML` 과 마찬가지로 `xss` 에 취약하기 때문에 주의해서 사용.
 
-2. vue 트랜지션 사용하여 여러 애니메이션을 추가해줄 수 있음. <br/>
+2. `vue` 트랜지션 사용하여 여러 애니메이션을 추가해줄 수 있음. <br/>
 아래는 라우터 트랜지션으로 특정 링크로 이동시 부드러운 화면 전환을 추가함.
 
 ```html
@@ -254,10 +254,10 @@ project
         store
 ```
 
-2. vuex 에서 actions, mutations 사용
-- 모든 api 는 actions 에서 사용함. 그런 뒤, mutations 를 이용하여 state 를 커밋해줌.
-- actions 는 dispatch, mutations 는 commit 임.
-- getters 를 만들어 state 를 리턴해주는데, mapGetter 를 사용하면 좀 더 깔끔하게 가능함. (참고)
+2. `vuex` 에서 `actions, mutations` 사용
+- 모든 `api` 는 `actions` 에서 사용함. 그런 뒤, `mutations` 를 이용하여 `state` 를 커밋해줌.
+- `actions` 는 d`ispatch, mutations` 는 `commit` 임.
+- `getters` 를 만들어 `state` 를 리턴해주는데, `mapGetter` 를 사용하면 좀 더 깔끔하게 가능함. (참고)
 
 ```js
 import Vue from 'vue';
