--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,19 @@
+## 2022-11-10
+
+1. Nuxt 란?
+ - Nuxt는 Vue.js 로 빠르게 웹을 제작할 수 있게 도와주는 프레임워크입니다. <br/>
+웹 애플리케이션을 제작할 때 필요한 Vuex, Router, Axios 와 같은 라이브러리들을 미리 구성하여 싱글 페이지 애플리케이션, 서버 사이드 렌더링, 정적 웹 사이트를 쉽게 제작할 수 있습니다.
+
+2. Nuxt 장점
+- 검색 엔진 최적화
+- 초기 프로젝트 설정 비용 감소와 생산성 향상
+    - ESLint, Prettier
+    - 라우터, 스토어 등의 라이브러리 설치 및 설정 파일 필요 x
+    - 파일 기반의 라우팅 방식, 설정 파일 자동 생성
+- 페이지 로딩 속도와 사용자 경험 향상
+    - 브라우저가 하는 일을 서버에 나눠준다.
+    - 모르면 지나칠 수 있는 코드 스플리팅이 기본으로 설정
+
 ## 2022-11-09
 
 1. 컴포넌트 플러그인화. 
