asyncData 관련 내용 추가

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,31 @@
+## 2022-11-11
+
+1. `asyncData`
+ - Nuxt 에서 사용하는 비동기 데이터 호출 방법으로 페이지에 진입 전 발생합니다.
+ - this 를 사용할 수 없고 return { data } 를 해줄 수 있음.
+
+```html
+<template>
+  <div>
+    <p>{{ user }}</p>
+  </div>
+</template>
+
+<script>
+import axios from 'axios';
+
+export default {
+  // params의 id가 1이라고 가정
+  async asyncData({ params, $http }) {
+    const response = await axios.get(`/users/${params.id}`);
+    const user = response.data; // this.user 가 아니라 user 객체로 만든 다음에 객체로 리턴하면 this.user 로 리턴됨.
+    return { user }
+  }
+}
+</script>
+
+```
+
 ## 2022-11-10
 
 1. Nuxt 란?
