asyncData 는 pages 컴포넌트에만 유효한 인스턴스 속성

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,8 +1,9 @@
 ## 2022-11-11
 
 1. `asyncData`
- - Nuxt 에서 사용하는 비동기 데이터 호출 방법으로 페이지에 진입 전 발생합니다.
- - this 를 사용할 수 없고 return { data } 를 해줄 수 있음.
+ - `Nuxt` 에서 사용하는 비동기 데이터 호출 방법으로 페이지에 진입 전 발생합니다.
+ - `this` 를 사용할 수 없고 `return { data }` 를 해줄 수 있음.
+ - `asyncData` 는 `pages` 컴포넌트에만 유효한 인스턴스 속성입니다.
 
 ```html
 <template>
