vue 에서 라우터 이동방법

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,6 +1,9 @@
 ## 2022-11-13
 
 1. `Nuxt.js` 에서는 `router-link` 대신 `nuxt-link` 를 사용하여 라우터를 처리합니다.
+2. `this.$router.push` 를 이용하여 라우터 이동을 할 수 있음. 히스토리 스택이 쌓여 뒤로 가기시 순차적으로 쌓였던 히스토리 순으로 이동됨.
+3. `this.$router.replace` 를 이용하여 라우터 이동하지만, 히스토리 스택이 쌓이지 않습니다.
+4. `this.$router.go` 를 이용하여 라우터 앞, 뒤 인덱스 만큼 이동시킬 수 있음.
 
 ## 2022-11-11
 
