nuxt 에서 동적 라우팅 방법

--- a/2022/11.md
+++ b/2022/11.md
@@ -4,6 +4,7 @@
 2. `this.$router.push` 를 이용하여 라우터 이동을 할 수 있음. 히스토리 스택이 쌓여 뒤로 가기시 순차적으로 쌓였던 히스토리 순으로 이동됨.
 3. `this.$router.replace` 를 이용하여 라우터 이동하지만, 히스토리 스택이 쌓이지 않습니다.
 4. `this.$router.go` 를 이용하여 라우터 앞, 뒤 인덱스 만큼 이동시킬 수 있음.
+5. `Nuxt` 에서 동적라우팅 하는방법으로 `pages` 폴더 아래에 `_` 를 이용하여 파일을 만듭니다. 예를 들어 `detail/1.vue` 라면, `detail` 폴더를 하나 만들고 `_id.vue `라는 파일을 만들도록 합니다. 그러면 `_` 는 라우터의 파라미터 이고 id 는 값으로 인식하여 자동으로 동적 라우팅이 된 것을 확인할 수 있습니다. 
 
 ## 2022-11-11
 
