vpr 키 사용, nuxt css 전역 설정 방법

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,9 @@
+## 2022-11-14
+
+1. `vscode` 에 `vue` 관련 `snippets` 설치시 `vpr` 만 해도 `props` 구조를 생성해줌.
+2. 부모에서 `v-model` 사용시 자식에서 `$emit` 으로 `input` 이벤트를 올리면 자동으로 할당됨.
+3. `Nuxt` 에서 전역 css 설정할라면, `nuxt.config.js` 에 css 배열에 경로를 넣어주면 됨.
+
 ## 2022-11-13
 
 1. `Nuxt.js` 에서는 `router-link` 대신 `nuxt-link` 를 사용하여 라우터를 처리합니다.
