--- a/2022/11.md
+++ b/2022/11.md
@@ -3,6 +3,16 @@
 1. `vscode` 에 `vue` 관련 `snippets` 설치시 `vpr` 만 해도 `props` 구조를 생성해줌.
 2. 부모에서 `v-model` 사용시 자식에서 `$emit` 으로 `input` 이벤트를 올리면 자동으로 할당됨.
 3. `Nuxt` 에서 전역 css 설정할라면, `nuxt.config.js` 에 css 배열에 경로를 넣어주면 됨.
+4. 스크립트에서 null 처리 방법
+
+```js
+config = { a:1 }
+
+if (config.b == null) config.b = 2;
+
+// 위의 로직이 아래와 같음.
+config.b ??= 2;
+```
 
 ## 2022-11-13
 
