--- a/2022/11.md
+++ b/2022/11.md
@@ -8,7 +8,7 @@
 ```js
 config = { a:1 }
 
-if (config.b == null) config.b = 2;
+if (config.b === null || ) config.b = 2;
 
 // 위의 로직이 아래와 같음.
 config.b ??= 2;
