--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,7 @@
+## 2022-11-15
+
+1. vue 에서 라우터의 push 를 사용할 때, 프로미스 객체를 반환함으로 .catch 를 사용하여 에러처리를 할 수 있음.
+
 ## 2022-11-14
 
 1. `vscode` 에 `vue` 관련 `snippets` 설치시 `vpr` 만 해도 `props` 구조를 생성해줌.
