유니버설 모드란?

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,6 +1,8 @@
 ## 2022-11-15
 
 1. vue 에서 라우터의 push 를 사용할 때, 프로미스 객체를 반환함으로 .catch 를 사용하여 에러처리를 할 수 있음.
+2. 유니버설 모드 - 기존의 싱글 페이지 애플리케이션이 가지고 있는 검색 엔진 최적화(Search Engine Optimization) 문제와 페이지 렌더링 속도 문제를 서버 사이드 렌더링이 해결할 수 있다는 것.
+(Nuxt 가 유니버설 모드임)
 
 ## 2022-11-14
 
