nuxt 에서 nuxtServerInit, fetch 내용

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,24 @@
+## 2022-11-16
+
+1. `nuxtServerInit`
+ - 스토어에 데이터가 담겨진 상태로 스토어가 생성됩니다.
+ - 서버 사이드 렌더링 시점에 실행되기 때문에 스토어에 미리 데이터를 설정해 놓거나 서버에서만 접근할 수 있는 데이터를 다룰 때 유용합니다.
+ - 호출할 필요없이 자동으로 넉스트 앱이 실행될 때 실행됨(라이플 싸이클 훅 처럼).
+
+```js
+actions: {
+  nuxtServerInit(storeContext, nuxtContext) {
+    storeContext.commit('뮤테이션 함수명');
+    if (process.server) {
+      const { req, res, beforeNuxtRender } = nuxtContext;
+    }
+  }
+}
+```
+2. `fetch` 는 페이지 컴포넌트 뿐만 아니라 일반 뷰 컴포넌트에서도 사용할 수 있는 데이터 호출 속성입니다. <br/>
+`asyncData` 는 페이지 컴포넌트에서만 사용가능함. [참고]
+ - 바로 접근시와 페이지 이동하여 접근시 `this` 가 달라집니다. 바로 접근시에는 서버에 `this` 를 보지만, 페이지 이동하여 접근시 `vue` 를 `this` 로 보고 있습니다.
+
 ## 2022-11-15
 
 1. vue 에서 라우터의 push 를 사용할 때, 프로미스 객체를 반환함으로 .catch 를 사용하여 에러처리를 할 수 있음.
