--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,17 @@
+## 2022-11-17
+
+1. `Heroku` 에 Node.js 로 배포시에 이제 아무설정도 하지 않으면 node.js 에 최신 버전을 가져와 빌드를 하게 됨. 그런 경우에 기존에 프로젝트와 노드 버전이 맞지 않아 의존성을 다운로드 받지 못하는 문제가 발생함. package.json 에 어떤 버전을 싸용하는지 명시해주어야함.
+
+```json
+  "name": "nuxt-start",
+  "version": "1.0.0",
+  "private": true,
+  "engines": {
+    "node": "16.17.0",
+    "npm": "8.15.0"
+  },
+```
+
 ## 2022-11-16
 
 1. `nuxtServerInit`
