nuxt 에서 store 다른 모듈 사용방법

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,24 @@
+## 2022-11-18
+
+1. nuxt.js 에서 store 사용시 index.js 말고 다른 모듈로 접근하는 방법으로 예를들어 store/count.js 파일을 하나 만든다.
+그 안에 state, mutation 을 다음과 같이 정의한다.
+
+```js
+export const state = () => ({
+  header: 'Count Page',
+  count: 0
+});
+
+export const mutations = {
+  addCount(state, count) {
+    state.count += count;
+  }
+};
+```
+
+사용하는 곳에서 `this.store.state.count.header` 이런 식으로 state 밑에 모듈 count 라는 객체가 하나 더 추가되어 사용할 수 있다.
+mutations 사용시에는 `this.store.commit('count/addCount', 1)` 과 같은 형식으로 사용할 수 있음.
+
 ## 2022-11-17
 
 1. `Heroku` 에 Node.js 로 배포시에 이제 아무설정도 하지 않으면 node.js 에 최신 버전을 가져와 빌드를 하게 됨. 그런 경우에 기존에 프로젝트와 노드 버전이 맞지 않아 의존성을 다운로드 받지 못하는 문제가 발생함. package.json 에 어떤 버전을 싸용하는지 명시해주어야함.
