--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,8 @@
+## 2022-11-21
+
+1. `wsl` 이란 `Linux`용 `Windows` 하위 시스템을 사용하면 개발자가 기존 가상 머신의 오버헤드 또는 듀얼 부팅 설정 없이 대부분의 명령줄 도구, 유틸리티 및 애플리케이션을 비롯한 `GNU/Linux` 환경을 수정하지 않고 `Windows` 에서 직접 실행할 수 있습니다. (결론적으로는 윈도우에서 리눅스를 사용할 수 있게 해주는 녀석) <br/>
+가끔 노드설치가 윈도우에서 잘 되지 않을 때가 있는데 그런 경우에 리눅스를 이용하여 설치하면 되는 경우가 발생합니다.
+
 ## 2022-11-18
 
 1. nuxt.js 에서 store 사용시 index.js 말고 다른 모듈로 접근하는 방법으로 예를들어 store/count.js 파일을 하나 만든다.
