--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,8 @@
+## 2022-11-22
+
+1. `nuxt-link` 와 `a` 태그의 차이점.
+ - nuxt-link 를 사용시 화면 전환이 느껴지지 않음. a 태그사용시 화면전환이 느껴짐. 응답 속도를 올릴 수 있음.
+
 ## 2022-11-21
 
 1. `wsl` 이란 `Linux`용 `Windows` 하위 시스템을 사용하면 개발자가 기존 가상 머신의 오버헤드 또는 듀얼 부팅 설정 없이 대부분의 명령줄 도구, 유틸리티 및 애플리케이션을 비롯한 `GNU/Linux` 환경을 수정하지 않고 `Windows` 에서 직접 실행할 수 있습니다. (결론적으로는 윈도우에서 리눅스를 사용할 수 있게 해주는 녀석) <br/>
