--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,8 @@
+## 2022-11-23
+
+1. `Nuxt` 에서는 Vuex 에 기존 클래식 모드를 권장하지 않음. 3 부터는 삭제 예정.
+2. `Nuxt` 에서 `Strict Mode` 가 자동으로 true 지만, `store/index.js` 에서 `export const strict = process.env.NODE_ENV !== 'production'` 다음과 같이 설정해주면됨.
+
 ## 2022-11-22
 
 1. `nuxt-link` 와 `a` 태그의 차이점.
