피그마 사용시 이미지 다운 하는 방법

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,7 @@
+## 2022-11-24
+
+1. 피그마 사용시 export 하고자하는 이미지를 선택 후, svg, png 등 원하는 확장자로 내려받을 수 있음.
+
 ## 2022-11-23
 
 1. `Nuxt` 에서는 Vuex 에 기존 클래식 모드를 권장하지 않음. 3 부터는 삭제 예정.
