모바일 가로,세로 퍼블리싱 방법

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,18 @@
+## 2022-11-25
+
+1. PC, 모바일 관련 해서 퍼블리싱시 세로, 가로 모드 별로 다르게 해줘야할 때가 있다. 보통 반응형이 아닌, 적응형 사이트에서 볼 수 있는 구조임.
+
+```css
+/* css... */
+@media (orientation: portrait) {
+/* 세로 모드 */
+}
+
+@media (orientaion: landscape) {
+/* 가로 모드 */
+}
+```
+
 ## 2022-11-24
 
 1. 피그마 사용시 export 하고자하는 이미지를 선택 후, svg, png 등 원하는 확장자로 내려받을 수 있음.
