nuxt 에서 `process.browser` 사용하여 window 객체를 사용

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,15 +1,9 @@
 ## 2022-11-25
 
-1. PC, 모바일 관련 해서 퍼블리싱시 세로, 가로 모드 별로 다르게 해줘야할 때가 있다. 보통 반응형이 아닌, 적응형 사이트에서 볼 수 있는 구조임.
-
-```css
-/* css... */
-@media (orientation: portrait) {
-/* 세로 모드 */
-}
-
-@media (orientaion: landscape) {
-/* 가로 모드 */
+1. nuxt 에서 `process.browser` 사용하여 window 객체를 사용할 수 있음. 
+```js
+if (process.browser) {
+  ...
 }
 ```
 
