스프린트란

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,8 @@
+## 2022-11-28
+
+1. 스프린트란 팀이 일정량의 작업을 완료하는 시간이 정해진 **짧은 기간**입니다. <br />
+스프린트는 스크럼과 애자일 방법론의 핵심이며, 스프린트 계획을 잘 짜야 애자일을 원활하게 진행할 수 있습니다.
+
 ## 2022-11-25
 
 1. nuxt 에서 `process.browser` 사용하여 window 객체를 사용할 수 있음. 
