svg 이미지 깨짐현상 처리

--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,7 @@
+## 2022-11-29
+
+1. `svg` 이미지가 모바일에서 깨지는 현상이 발생하였는데 `svg` 내부에 `filter` 가 정의되어 있어서 발생한 문제로 `filter` 를 제거하여 처리함. 
+
 ## 2022-11-28
 
 1. 스프린트란 팀이 일정량의 작업을 완료하는 시간이 정해진 **짧은 기간**입니다. <br />
