--- a/2022/11.md
+++ b/2022/11.md
@@ -1,3 +1,8 @@
+## 2022-11-30
+
+1. `Lighthouse` 를 사용하여 현재 페이지에 성능을 측정할 수 있다. 성능이 왜 안좋은지 이유가 다 나옴.
+2. `web.dev` 에 들어가서 바로 측정할 수 있으니 페이지 성능 개선할 때 이용해보자.
+
 ## 2022-11-29
 
 1. `svg` 이미지가 모바일에서 깨지는 현상이 발생하였는데 `svg` 내부에 `filter` 가 정의되어 있어서 발생한 문제로 `filter` 를 제거하여 처리함. 
