FCP, LCP, CLS 관련 문제

--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,10 @@
+## 2022-12-05
+
+1. FCP: 사용자가 감지하는 로드 속도, 사용자가 화면에서 콘텐츠를 볼 수 있는 첫번째 지점을 표시하고 무언가 진행되고 있음을 인지할 수 있음.
+2. LCP: 사용자가 감지하는 로드 속도, 사용자가 해당 페이지를 사용할 수 있다고 인지할 수 있음.
+3. CLS: 벤츠.. 가 아니라, 시각적 안정성을 측정할 때 사용하는 것이며, 렌더링이 일어나면서 레이아웃 이동이 발생하면 해당 문제가 발생합니다.
+사용자가 예측하지 못한 동작이 발생하기 때문에... (영역을 잡아두지 않은 상태에서 이러한 문제가 발생함.)
+
 ## 2022-12-01
 
 1. 인라인 요소 즉 `span` 태그 사용시 빈공백 없애는 방법
