구글 서치 URL 등록되지 않는 문제

--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,8 @@
+## 2022-12-08
+
+1. 구글 서치 콘솔에서 URL 이 등록되지 않았다는 오류가 나오는 경우가 있는데 이의 경우, 사이트맵을 등록했다고 해도 모든 글이 구글이 등록해주지는 않는 경우가 있습니다.
+이런 경우에는 수동 색인 요청을 해주면 됩니다.
+
 ## 2022-12-05
 
 1. FCP: 사용자가 감지하는 로드 속도, 사용자가 화면에서 콘텐츠를 볼 수 있는 첫번째 지점을 표시하고 무언가 진행되고 있음을 인지할 수 있음.
