모바일에서 overflow 안먹는 문제

--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,17 @@
+## 2022-12-13
+
+1. body 에 overflow 를 사용할시 전체영역에 스크롤영역이 발생해버림. <br/>
+이를 막기 위해서 oveflow: hidden 으로 해주면 되는데 모바일마다 안되는 경우가 있음.
+
+아래와 같이 선언해주어서 전체를 막아주어야함.
+
+```css
+  touch-action: none;
+  -webkit-overflow-scrolling: none;
+  overflow: hideen;
+  overscroll-behavior: none;
+```
+
 ## 2022-12-12
 
 1. `require` 사용시 안에서 동적 표현식을 사용하는 것은 바람직하지 않음.
