img 태그 loading="lazy" 사용

--- a/2022/12.md
+++ b/2022/12.md
@@ -12,6 +12,8 @@
   overscroll-behavior: none;
 ```
 
+2. `img` 태그 사용시 `loading="lazy"` 를 사용하면 이미지 태그가 뷰포트에 있을시에 `load` 하는 것을 의미 합니다. 
+
 ## 2022-12-12
 
 1. `require` 사용시 안에서 동적 표현식을 사용하는 것은 바람직하지 않음.
