--- a/2022/12.md
+++ b/2022/12.md
@@ -1,7 +1,7 @@
 ## 2022-12-13
 
-1. body 에 overflow 를 사용할시 전체영역에 스크롤영역이 발생해버림. <br/>
-이를 막기 위해서 oveflow: hidden 으로 해주면 되는데 모바일마다 안되는 경우가 있음.
+1. body 에 `overflow` 를 사용할시 전체영역에 스크롤영역이 발생해버림. <br/>
+이를 막기 위해서 `oveflow: hidden` 으로 해주면 되는데 모바일마다 안되는 경우가 있음.
 
 아래와 같이 선언해주어서 전체를 막아주어야함.
 
