--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,7 @@
+## 2022-12-14
+
+1. PWA - 프로그레시브 웹앱은 사용자 경험 향상을 목적으로 푸시와 같은 모바일 기능과 URL 입력 없이 간편하게 아이콘을 눌러 웹 사이트를 접속할 수 있는 최신 웹 애플리케이션 입니다.
+
 ## 2022-12-13
 
 1. body 에 `overflow` 를 사용할시 전체영역에 스크롤영역이 발생해버림. <br/>
