--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,16 @@
+## 2022-12-15
+
+CLS - 누적 레이아웃 이동으로 사용자가 예상치 못한 레이아웃 이동이 일어나는 빈도를 수량화 한 것.
+
+좋은 CLS 점수를 받기 위해서는 0.1 이하여야 합니다.
+
+해결방법 - 렌더링되는 영역이 어느정도 고정영역을 가지고 레이아웃의 변화가 커지지 않도록 해야 합니다.
+
+1. img 태그의 width, height 설정
+2. 서버사이드렌더링 사용시 클라이언트 렌더링 영역이 깨지지 않도록 Dom 구조를 짜주어야함. 
+3. lighthouse, pageSpeed 같은 오픈 소스 도구를 참고하여 처리.
+
+
 ## 2022-12-14
 
 1. PWA - 프로그레시브 웹앱은 사용자 경험 향상을 목적으로 푸시와 같은 모바일 기능과 URL 입력 없이 간편하게 아이콘을 눌러 웹 사이트를 접속할 수 있는 최신 웹 애플리케이션 입니다.
