nuxt 에서 static 밑에 폴더 헤더정보 보내는 방법

--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,21 @@
+## 2022-12-20
+
+1. nuxt 에서 static 밑에 폴더 헤더정보 보내는 방법
+
+```js
+  // nuxt.config.js
+  render: {
+    static: {
+      // 참고: 여기서 static 폴더 아래에 파일들에 대한 header 정보를 담을 수 있어요.
+      setHeaders(res, path, stat) {
+        if (path.indexOf('.css') > -1) {
+          res.setHeader('Cache-Control', 'public, max-age=604800')
+        }
+      },
+    },
+  },
+```
+
 ## 2022-12-15
 
 CLS - 누적 레이아웃 이동으로 사용자가 예상치 못한 레이아웃 이동이 일어나는 빈도를 수량화 한 것.
