nuxt 라우팅 미들웨어 사용

--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,30 @@
+## 2022-12-21
+1. 미들웨어 사용하여 로그인 체킹 여부 확인
+
+`middleware/login.js`
+
+```js
+/**
+ * 전역 라우팅 미들웨어 - 페이지 이동시 로그인
+ */
+export default ({ store, route, redirect }) => {
+  // 로그인이 되어 있지 않은 경우, 무조건 로그인 창으로 보냄.
+  if (!store.state.isLogin) {
+    return redirect('/login')
+  }
+}
+```
+
+`nuxt.config.js`
+
+```js
+// 라우터 설정
+router: {
+  // 미들웨어 설정
+  middleware: ['login'],
+}
+```
+
 ## 2022-12-20
 
 1. nuxt 에서 static 밑에 폴더 헤더정보 보내는 방법
