node 18 버전 관련 nuxt 버전 호환

--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,7 @@
+## 2022-12-22
+1. node 18 부터는 nuxt2 에 대한 호환이 제대로 되지 않는 다고함. <br/> 
+그럼으로 해결하기 위해서는 nuxt3 로 올리고 node 18 버전을 사용해야함.
+
 ## 2022-12-21
 1. 미들웨어 사용하여 로그인 체킹 여부 확인
 
