스벨트 간단 예제 추가

--- a/2022/12.md
+++ b/2022/12.md
@@ -25,6 +25,27 @@ Overhead - 어떤 처리를 위해 들어가는 간접적인 시간이나 메모
 
 스벨트의 자유도가 비교적 높기 떄문에 호출 스택이나 데이터의 메모리 참조 등 자바스크립트 등의 동작 원리들을 이해하는 것이 중요함.
 
+### 예시
+아래와 같이 훨씬 짧게 사용할 수 있음.
+
+```html
+<script>
+	import HelloSvelte from './Hello.svelte'
+	
+	let name = 'world';
+</script>
+
+<h1>Hello {name}!</h1>
+
+<HelloSvelte />
+
+<style>
+	h1 {
+		color: blue
+	}
+</style>
+```
+
 ## 2022-12-22
 1. node 18 부터는 nuxt2 에 대한 호환이 제대로 되지 않는 다고함. <br/> 
 그럼으로 해결하기 위해서는 nuxt3 로 올리고 node 18 버전을 사용해야함.
