--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,20 @@
+## 2022-12-27
+1. 브라우저 목록 DB 관련 업데이트 문제
+
+### 문제
+CLI 도구를 사용하여 브라우저 목록 구성에서 `Browserslist` 로 `caniuse-lite` 를 업데이트합니다. <br/>
+프론트 환경에서 서버 실행시 `Browerslist` 를 업데이트하라는 문제가 주기적으로 발생하는데, 이러한 경우에는 최신으로 업데이트를 해주어야 합니다.
+
+### 이유
+- `마지막 2개 버전` 또는 `>1%` 와 같은 쿼리에서 최신 브라우저를 통계로 사용하기 때문입니다.
+- 최신 브라우저에 맞췄기 때문에 실제 브라우저 데이터를 사용하여 폴리필을 최대한 덜 사용하게 됨으로 CSS, JS 의 용량을 줄일 수 있어 웹사이트의 성능을 올릴 수 있습니다.
+- `caniuse-lite` 의 중복을 제거하고 버전을 동기화 시켜줍니다.
+
+### 설치
+```
+npx update-browserslist-db@latest
+```
+
 ## 2022-12-23
 
 ### svelte 특징
