svelte 에서 단방향, 양방향 데이터 바인딩 사용방법

--- a/2022/12.md
+++ b/2022/12.md
@@ -1,3 +1,11 @@
+## 2022-12-28
+1. `svelte` 에서 단방향 데이터, 양방향 데이터 흐름 사용방법 앞에 (양방향 데이터는 `bind` 를 붙임)
+
+```html
+<input type="text" value="{name}" /> => 단방향 데이터 바인딩
+<input type="text" bind:value="{name}" /> => 양방향 데이터 바인딩
+```
+
 ## 2022-12-27
 1. 브라우저 목록 DB 관련 업데이트 문제
 
