--- a/2022/12.md
+++ b/2022/12.md
@@ -6,6 +6,50 @@
 <input type="text" bind:value="{name}" /> => 양방향 데이터 바인딩
 ```
 
+2. 조건문과 반복문
+
+```html
+<script>
+	let toggle = false
+</script>
+
+<button on:click={() => {toggle = !toggle}}>
+	toggle
+</button>
+
+{#if toggle}
+	<h1>Hello {name}!</h1>
+{:else}
+	<div>
+		No name!
+	</div>
+{/if}
+```
+
+`#if` 로 시작해서 `/if` 로 끝남. 중간에 `:else` 를 이용해서 `else` 로직을 만들 수 있음.
+
+특수기호에 대해서 조심해야함. 
+
+`#` ⇒ 시작
+
+`/` ⇒ 끝
+
+`:` ⇒ 중간
+
+### 반복문
+
+```html
+<script>
+	let fruits = ['Apple', 'Banana', 'Cherry', 'Orange', 'Mango']
+</script>
+
+<ul>
+	{#each fruits as fruit}
+		<li>{fruit}</li>
+	{/each}
+</ul>
+```
+
 ## 2022-12-27
 1. 브라우저 목록 DB 관련 업데이트 문제
 
