자바스크립트 사용시 클린하게 사용하는 방법

--- a/2023/01.md
+++ b/2023/01.md
@@ -1,4 +1,27 @@
-### 2023-01-02
+## 2023-01-03
+
+자바스크립트 사용시 클린하게 사용하는 방법
+
+1. null 유효성 처리
+
+```js
+// 아래와 같은 유효성 검사는 코드가 너무 길어짐.
+if (a !== "" && a !== null && a !== undefined)
+// 아래과 같은 방식으로 변경가능.
+if (!!a)
+```
+
+2. 주석 사용
+- 장황하지 않아야함. (간결하게) 자세한 내용은 커밋 내용으로 남겨라.
+- 주석의 일관성 유지
+- 시간이 지나도 주석은 수정되지 않아야함.
+
+3. 객체 사용시 단일 매개 변수로 사용하지 마라.
+- 객체 사용시 여러 매개변수로 사용하면 가독성이 상승함.
+- 테스트 코드, 유지보수가 쉬워지고 불필요한 로직이 사라져 성능 향상에 도움이 됨.
+
+
+## 2023-01-02
 
 이번에 백엔드 개발 쪽에서 `postman` 을 사용하다가 모종의 이유로 `swagger` 로 변경한다고 하여 간략한 개념에 대해 공부함.
 
