update 20230107 vue click 콜백 권장 svelte 에서 onMount 사용

--- a/2023/01.md
+++ b/2023/01.md
@@ -1,3 +1,33 @@
+## 2023-01-07
+
+1. vue 에서 click 이벤트 사용시 아래와 같이 콜백함수를 사용하는 것을 권장
+```js
+:click="cnt + 1"
+=> 아래와 같이 사용
+:click="() => cnt + 1"
+=> 아래와 같이 함수로 사용
+:click="increase"
+increase() {
+    cnt + 1
+}
+```
+
+2. svelte 에서 Dom 이 완성되었을 때 발생하는 생명주기 함수로 onMount 가 있다.
+
+```js
+import { onMount } from 'svelte';
+	
+let name = 'world';
+const box = 'Box!!';
+let isRed = false;
+
+// 컴포넌트가 완성되면, 콜백을 실행함.
+onMount(() => {
+	const boxElm = document.querySelector('.box');
+	boxElm.addEventListener('click', () => { isRed = !isRed });
+})
+```
+
 ## 2023-01-03
 
 자바스크립트 사용시 클린하게 사용하는 방법
