vue 에서 swiper 사용

--- a/2023/01.md
+++ b/2023/01.md
@@ -1,3 +1,24 @@
+## 2023-01-10
+
+1. `vue` 에서 `swiper` 기능 사용 
+
+```js
+this.swiper = new Swiper('.slide', {
+	observer: true,
+	observeParents: true,
+	slidesPerView: 'auto',
+	spaceBetween: 20,
+	calculateHeight: true,
+	animating: true,
+	// slideToClickedSlide: true,
+	//   loop: true,
+	pagination: {
+	el: '.swiper-pagination-tag',
+	clickable: true,
+	},
+})
+```
+
 ## 2023-01-07
 
 1. vue 에서 click 이벤트 사용시 아래와 같이 콜백함수를 사용하는 것을 권장
