--- a/2023/01.md
+++ b/2023/01.md
@@ -1,3 +1,19 @@
+## 2023-01-12
+
+1. `vue` 에서 `watch` 사용시 중첩 데이터 감지 방법.
+- 배열, object 에 watch 를 걸고 내부가 변경되면 감지 하지 못하는 경우가 발생하는데, 이럴때는 watch 안에 deep 속성을 사용해주면 됩니다.
+
+```js
+watch: {
+    arr: {
+        deep: true,
+        handler() {
+            //...
+        }
+    }
+}
+```
+
 ## 2023-01-10
 
 1. `vue` 에서 `swiper` 기능 사용 
