스벨트에서 컴포넌트 만들기

--- a/2023/01.md
+++ b/2023/01.md
@@ -1,3 +1,29 @@
+## 2023-01-16
+1. svelte 에서 컴포넌트 만들기
+
+```js
+// App.svelte
+<script>
+	import Sub from './Sub.svelte';
+	
+	let name = 'world';
+	let age = 17;
+</script>
+
+<h1>Hello {name}!</h1>
+<Sub name={"lee"} {age}></Sub>
+
+// Sub.svelte
+<script>
+	export let name;
+	export let age;
+</script>
+
+<h2>
+	hi {name} {age}
+</h2>
+```
+
 ## 2023-01-12
 
 1. `vue` 에서 `watch` 사용시 중첩 데이터 감지 방법.
