svelte 에서 간단한 store 사용방법

--- a/2023/01.md
+++ b/2023/01.md
@@ -1,5 +1,5 @@
 ## 2023-01-16
-1. svelte 에서 컴포넌트 만들기
+1. `svelte` 에서 컴포넌트 만들기
 
 ```js
 // App.svelte
@@ -22,6 +22,22 @@
 <h2>
 	hi {name} {age}
 </h2>
+```
+
+2. `svelte` 에서 `store` 사용하기
+
+```js
+// store.js
+import { writable } from 'svelte/store'
+
+// 외부에서 사용하기 위해 writable 을 이용해 초기화 해줌.
+export let storeName = writable('Hero')
+
+// app.svelte
+import { storeName } from 'svelte.js'
+
+// $ 를 붙여줘야 실제 데이터를 가져옴
+console.log($storeName) // Hero
 ```
 
 ## 2023-01-12
