--- a/2023/01.md
+++ b/2023/01.md
@@ -1,3 +1,26 @@
+## 2023-01-25
+1. svelte 라이프 싸이클 
+- 컴포넌트 연결시(최초) => beforeUpdate => (Dom 과 렌더링 동기화) => onMount => afterUpdate
+- 컴포넌트 해제시 => onDestory (컴포넌트가 완전히 떨어지기 전에 발생)
+- 컴포넌트 갱신시 => beforeUpdate => afterUpdate
+
+2. tick
+스벨트에서 데이터가 갱신되고 나서 화면이 바뀌는 반응성을 가질 때 까지 잠시 기다리게 해주는 능력을 가진 함수로 Promise 를 반환함.
+
+```js
+import { tick } from 'svelte'
+
+let name = 'world'
+
+async function handler() {
+	name = 'heropy'
+	await tick()
+	console.log(h1.innerText) // tick 이 없으면 world 가 나옴. 있으면 heropy 가 나옴. 실제 화면에는 heropy 가 적용됨.
+}
+
+<h1 on:click={handler}>Hello {name}</h1>
+```
+
 ## 2023-01-16
 1. `svelte` 에서 컴포넌트 만들기
 
