스벨트에서 디버거 키워드 사용방법

--- a/2023/02.md
+++ b/2023/02.md
@@ -30,3 +30,14 @@
 
 {@html h1}
 ```
+
+**debugger**
+
+디버거 키워드를 아래와 같이 사용할 수 있음.
+
+```html
+<script>
+    const index = 0
+</script>
+{@debug index}
+```
