git init 시 Reinitialized existing Git repository 관련 오류 해결 방법

--- a/2023/02.md
+++ b/2023/02.md
@@ -1,3 +1,9 @@
+## 2023-02-10
+
+프로젝트를 git 저장소에 저장하기 위해 git init 시 `Reinitialized existing Git repository` 관련 오류가 발생하는 경우가 있다. <br/>
+이럴 때는 `git remote -v` 명령어를 쳐서 리모트 상태를 확인 뒤, 원격 리모트가 새로 생성한 리모트가 아닌 경우, `git remote rm origin` 을 사용하여 삭제해줍니다. <br/>
+삭제 후, 다시 리모트 등록을 해주면 끝!
+
 ## 2023-02-06
 
 **스벨트 보간법**
