--- a/2023/02.md
+++ b/2023/02.md
@@ -1,3 +1,11 @@
+## 2023-02-14
+
+- POC(Proof of Concept): 신기술을 프로젝트에 도입하기 앞서 검증하는 목적으로 사용함.
+- Pilot: 어느정도 검증된 기술을 가지고 소규모로 프로젝트를 해보는 시험 프로젝트
+- BMT(Bench Marking Test): 실제와 같은 동일한 시험환경에서 제품의 성능에 대해 비교시험을 반복해서 객관적으로 평가하는 것.
+
+- 페르소나: 어떤 서비스나 제품, 사이트 등을 사용하는 다양한 사용자들의 유형을 대표하는 가상의 캐릭터 입니다.
+
 ## 2023-02-10
 
 프로젝트를 git 저장소에 저장하기 위해 git init 시 `Reinitialized existing Git repository` 관련 오류가 발생하는 경우가 있다. <br/>
