리액트 v18 에서 변형되는 부분

--- a/2023/02.md
+++ b/2023/02.md
@@ -1,3 +1,47 @@
+## 2023-02-19
+
+**react v18 변경점**
+
+1. v18 부터 상태 업데이트를 하나로 통함해서 배치처리를 한 후 리렌더링을 진행합니다.
+기존에는 fetch 사용하여 콜백에서 상태 업데이트시 리렌더링이 계속 발생했는데 이제는 한 번만 발생함. (wow)
+2. createRoot 사용 
+
+```js
+// React-17v
+import React from "react";
+import ReactDOM from "react-dom";
+import App from "./App";
+
+ReactDOM.render(<App />, document.getElementById("root"));
+
+// React-18v
+import React from "react";
+import App from "./App";
+
+import { createRoot } from "react-dom/client";
+const container = document.getElementById("root");
+const root = createRoot(container);
+root.render(<App />);
+```
+3. `userTransition` 훅을 사용하여 pending 값을 가져와 렌더링 분기처리가능. (sleep 같은 느낌)
+
+4. `startTransition` 은 상태 업데이트를 지연시킬 때 사용.
+
+5. `createRoot` 대신 `hyrateRoot` 사용하여 SSR 설계 지원 (유저에게 보여주는 첫 페이지를 보다 빠르게)
+
+6. react server component
+리액트에서 node.js 와 같은 server 역할을 수행하는 server component 기능을 제공함.
+`.client.jsx, .server.jsx, .jsx` 3개의 파일로 구성됨.
+
+7. useId 훅으로 난수 id 를 생성하는 hook 입니다.
+
+8. `useSyncExternalStore` 훅으로 기존 `userMutableSource` 훅에서 변경되었고 강제로 업데이트를 발생시키는 훅입니다.
+
+9. `useDeferredValue` 훅으로 디바운스와 비슷하지만 고정된 지연시간이 없고 렌더링이 반영되는 시점에 지연 렌더링을 시도함.
+
+10. `userInsertionEffect` 훅으로 css in js 라이브러리를 활용할 때 스타일 삽입 성능문제를 해결할 수 있는 훅입니다.
+
+
 ## 2023-02-14
 
 - POC(Proof of Concept): 신기술을 프로젝트에 도입하기 앞서 검증하는 목적으로 사용함.
