vue 에서 외부라이브러리 사용할 수 있도록 해주는 라이브러리

--- a/2023/02.md
+++ b/2023/02.md
@@ -1,3 +1,13 @@
+## 2023-02-23
+
+1. `Vue` 에서 개발하다보면, 가끔 전역 스크립트를 가져와야할 일이 발생한다. (html.. 마이그레이션시) <br/>
+그러한 경우, 편하게 처리할 수 있는 라이브러리를 추천한다. <br/>
+`vue-plugin-load-script` 라이브러리로써 vue2 는 1.x.x 를 사용하면 되고 3부터는 최신버전을 사용하면 됩니다.
+
+```
+yarn add vue-plugin-load-script@^1.x.x
+```
+
 ## 2023-02-22
 
 1. `Pexels API`는 사진, 동영상을 포함하여 완전한 Pexels 콘텐츠 라이브러리에 대한 프로그래밍 방식 액세스를 활성화합니다. 모든 콘텐츠는 무료로 사용 가능하며, 당사의 지침 내에 있는 한 원하는 모든 것에 대해 Prexels 콘텐츠를 사용할 수 있습니다.
