--- a/2023/02.md
+++ b/2023/02.md
@@ -1,3 +1,9 @@
+## 2023-02-28
+
+1. `jquery` 로 되어있는 이벤트 스크롤을 다루다보면 스크롤시 이벤트 경고 로그가 가끔 나오는 것을 볼 수 있다. 이러한 경우, 스크롤이벤트를 너무 많이 발생하는 문제인데 2가지 방법으로 해결 가능하다. <br/>
+첫번째, 바닐라 스크립트 변경 후, passive 를 사용해준다! <br/>
+두번째, 디바운스 함수를 사용하여 적용해준다!
+
 ## 2023-02-23
 
 1. `Vue` 에서 개발하다보면, 가끔 전역 스크립트를 가져와야할 일이 발생한다. (html.. 마이그레이션시) <br/>
