--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,54 @@
+## 2023-03-06
+1. useContext 란?
+context 를 이용하면 단계마다 props 를 넘겨주지 않고 컴포넌트 전체 데이터를 제공할 수 있음.
+
+```js
+// App.js
+import React, { createContext } from "react";
+import Children from "./Children";
+
+// AppContext 객체를 생성한다.
+export const AppContext = createContext();
+
+const App = () => {
+  const user = {
+    name: "김채원",
+    job: "가수"
+  };
+
+  return (
+    <>
+      <AppContext.Provider value={user}>
+        <div>
+          <Children />
+        </div>
+      </AppContext.Provider>
+    </>
+  );
+};
+
+export default App;
+```
+
+```js
+// Childern.js
+import React, { useContext } from "react";
+import { AppContext } from "./App";
+
+const Children = () => {
+  // useContext를 이용해서 따로 불러온다.
+  const user = useContext(AppContext);
+  return (
+    <>
+      <h3>AppContext에 존재하는 값의 name은 {user.name}입니다.</h3>
+      <h3>AppContext에 존재하는 값의 job은 {user.job}입니다.</h3>
+    </>
+  );
+};
+
+export default Children;
+```
+
 ## 2023-03-02
 
 1. webwork
