--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,8 @@
+## 2023-03-08
+1. npx 란?
+- npm 의 5.2.0 버전부터 추가된 도구.
+- 패키지 임시 설치 및 실행으로 실행시켜주는 도구(package runner 로 인식하시면 됨.)
+
 ## 2023-03-06
 1. useContext 란?
 context 를 이용하면 단계마다 props 를 넘겨주지 않고 컴포넌트 전체 데이터를 제공할 수 있음.
