시맨틱 태그에서 section, article 설명

--- a/2023/03.md
+++ b/2023/03.md
@@ -3,6 +3,11 @@
 - npm 의 5.2.0 버전부터 추가된 도구.
 - 패키지 임시 설치 및 실행으로 실행시켜주는 도구(package runner 로 인식하시면 됨.)
 
+2. 시맨틱 태그에서 section, article 설명
+- section 은 주제별!
+- article 은 독립적인 콘텐츠
+- 그래서 이제 주제 안에 여러개 콘텐츠가 오면 section 안에 aricle 이 올 수도 있고 콘텐츠 안에 여러개의 주제가 된다면 article 안에 section 이 올 수 있음.
+
 ## 2023-03-06
 1. useContext 란?
 context 를 이용하면 단계마다 props 를 넘겨주지 않고 컴포넌트 전체 데이터를 제공할 수 있음.
