aws 란..? (이제 슬슬 공부를 시작해보까)

--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,8 @@
+## 2023-03-10
+1. AWS 를 공부해보자구,,, (까먹은 지식을 꺼내보자...)
+- 아마존 닷컴에서 개발한 클라우드 컴퓨팅 플랫폼
+- 비즈니스와 개발자가 웹 서비스를 사용하여 확장 가능하고 정교한 애플리케이션 구축하도록 지원해준다.
+
 ## 2023-03-08
 1. npx 란?
 - npm 의 5.2.0 버전부터 추가된 도구.
