nuxt 에서 onesignal 사용하기

--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,27 @@
+## 2023-03-16
+1. nuxt 에서 `onesignal` 사용하기
+- `yarn add @nuxtjs/onesignal` 설치
+- nuxt.config.js 에 등록
+```js
+modules: [
+  '@nuxtjs/onesignal',
+  '@nuxtjs/pwa'
+]
+```
+- option 등록
+```js
+// Options
+oneSignal: {
+  init: {
+    appId: 'YOUR_APP_ID',
+    allowLocalhostAsSecureOrigin: true,
+    welcomeNotification: {
+        disable: true
+    }
+  }
+}
+```
+
 ## 2023-03-10
 1. AWS 를 공부해보자구,,, (까먹은 지식을 꺼내보자...)
 - 아마존 닷컴에서 개발한 클라우드 컴퓨팅 플랫폼
