chatgpt 사용하여 간단 퍼블리싱 작업

--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,7 @@
+## 2023-03-17
+1. 공부보다는 `chatGpt` 를 이용해서 작업 진행
+2. `chat gpt` 를 이용하여 퍼블리싱 작업을 진행해봄. (생각보다 만족함! 프롬프트만 정확하면 더 좋을듯~?!)
+
 ## 2023-03-16
 1. nuxt 에서 `onesignal` 사용하기
 - `yarn add @nuxtjs/onesignal` 설치
