--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,30 @@
+## 2023-03-21
+1. React 스터디 중 useEffect 에서 완전 마운트 시점에 동작시킬 수 있는 방법을 강구하다가 useRef 를 이용해봄.
+
+```js
+const mount = useRef(false);
+
+useEffect(() => {
+  let timer = null;
+
+  if (!mount.current) {
+    mount.current = true;
+  } else {
+    timer = setInterval(() => {
+      console.log("타이머 돌리는중!");
+    }, 1000);
+  }
+
+  return () => {
+    if (!!timer) {
+      clearInterval(timer);
+      console.log("타이머가 종료되었습니다.");
+    }
+  };
+}, []);
+
+```
+
 ## 2023-03-17
 1. 공부보다는 `chatGpt` 를 이용해서 작업 진행
 2. `chat gpt` 를 이용하여 퍼블리싱 작업을 진행해봄. (생각보다 만족함! 프롬프트만 정확하면 더 좋을듯~?!)
