vscode 에서 rubberduck 사용

--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,7 @@
+## 2023-03-22
+1. vscode 에서 `rubberduck` 이라는 `chatgpt` 를 이용한 익스텐션 사용.
+2. `openai` key 를 발급받아 등록하면 사용 가능
+
 ## 2023-03-21
 1. React 스터디 중 useEffect 에서 완전 마운트 시점에 동작시킬 수 있는 방법을 강구하다가 useRef 를 이용해봄.
 
