hyvor talk 연동 관련 내용

--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,7 @@
+## 2023-03-23
+1. [`hyvor talk`](https://talk.hyvor.com/) 이라는 댓글 솔루션 도입 및 서비스 연동 작업.
+2. SSO 를 제외하고는 생각보다 간단하게 사용가능하고 SSO 기능부터는 유료버전이 필요로 함. SSO 시 hash, userData 값을 백에서 프론트로 파싱에서 보내주어야함.
+
 ## 2023-03-22
 1. vscode 에서 `rubberduck` 이라는 `chatgpt` 를 이용한 익스텐션 사용.
 2. `openai` key 를 발급받아 등록하면 사용 가능
