--- a/2023/03.md
+++ b/2023/03.md
@@ -1,4 +1,8 @@
 ## 2023-03-23
+1. `canonical` (캐노니컬) 태그란 사이트내 URL 주소는 다르지만, 동일한 내용의 중복된 페이지가 있을 때 페이지에 코드를 삽입하여 검색엔진에 대표가 되는 URL 주소를 알려주는 역할을 합니다. <br/>
+예를 들어 URL 공유하기 기능 사용시 해당 URL 로 이동하기 위해 페이지 대표 URL 이 필요할 때 사용하는데 SEO 에 큰 역할을 합니다.
+
+## 2023-03-23
 1. [`hyvor talk`](https://talk.hyvor.com/) 이라는 댓글 솔루션 도입 및 서비스 연동 작업.
 2. SSO 를 제외하고는 생각보다 간단하게 사용가능하고 SSO 기능부터는 유료버전이 필요로 함. SSO 시 hash, userData 값을 백에서 프론트로 파싱에서 보내주어야함.
 
