--- a/2023/03.md
+++ b/2023/03.md
@@ -1,6 +1,49 @@
 ## 2023-03-23
 1. `canonical` (캐노니컬) 태그란 사이트내 URL 주소는 다르지만, 동일한 내용의 중복된 페이지가 있을 때 페이지에 코드를 삽입하여 검색엔진에 대표가 되는 URL 주소를 알려주는 역할을 합니다. <br/>
 예를 들어 URL 공유하기 기능 사용시 해당 URL 로 이동하기 위해 페이지 대표 URL 이 필요할 때 사용하는데 SEO 에 큰 역할을 합니다.
+2. useRef 를 이용해서 useState 에서의 불필요한 렌더링을 막을 수 있습니다. useRef 는 화면에 반영되지 않으므로 모든 작업 후, 마지막에 렌더링을 할 수 있도록 만들 수 있음. <br/>
+(예시)
+```js
+import { useState, useRef } from "react";
+
+function UseHookHandler() {
+  const [render, setRender] = useState(0);
+  const [count, setCount] = useState(1);
+  // ref 는 변화하여도 렌더링되지 않음.
+  const countRef = useRef(0);
+  let countVar = 0;
+
+  const handleReander = () => {
+    setRender(render + 1);
+  };
+
+  const handleStateCountUpdate = () => {
+    setCount(count + 1);
+  };
+
+  const handleRefCountUpdate = () => {
+    countRef.current++;
+  };
+
+  return (
+    <div>
+      <button type="button" onClick={handleReander}>
+        Render
+      </button>
+      <button type="button" onClick={handleStateCountUpdate}>
+        State Update
+      </button>
+      <button type="button" onClick={handleRefCountUpdate}>
+        Ref Update
+      </button>
+      <div>
+        <p>count: {count}</p>
+        <p>ref: {countRef.current}</p>
+      </div>
+    </div>
+  );
+}
+```
 
 ## 2023-03-23
 1. [`hyvor talk`](https://talk.hyvor.com/) 이라는 댓글 솔루션 도입 및 서비스 연동 작업.
