--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,16 @@
+## 2023-03-27
+1. `npkill` 은 오래된 라이브러리를 찾아서 삭제할 수 있는 npm 패키지 입니다. <br/>
+아래 명령어를 이용하여 사용할 수 있습니다.
+```
+npx npkill
+```
+2. `Bun` 이라는게 나왔다는 거 같다. <br/>
+js 기반으로 Node 대신에 사용하는 런타임 패키지 관리자입니다. <br/>
+기존의 js 의 느린 성능을 보완하여 zig 라는 언어로 작성되어 있어 훨씬 속도가 빠르다고 합니다. <br/>
+하지만 정식버전이 나오지 않고 아직 베타 수준으로 내후년쯤에야 사용가능하지 않을까....??? 그때되면 또 node 가 개선될지도.. <br/>
+`create react app` 기준 빌드시 Node 20초, Bun 4초 걸린다고 하니 기대해 봐도 될 듯 하다.
+
+
 ## 2023-03-23
 1. `canonical` (캐노니컬) 태그란 사이트내 URL 주소는 다르지만, 동일한 내용의 중복된 페이지가 있을 때 페이지에 코드를 삽입하여 검색엔진에 대표가 되는 URL 주소를 알려주는 역할을 합니다. <br/>
 예를 들어 URL 공유하기 기능 사용시 해당 URL 로 이동하기 위해 페이지 대표 URL 이 필요할 때 사용하는데 SEO 에 큰 역할을 합니다.
