redux, contextAPI 차이점

--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,10 @@
+## 2023-03-28
+1. `react` 에서 `redux` 와 `contextapi` 차이
+- `contextAPI` 는 React 의 부모 컴포넌트에서 자식 컴포넌트로 데이터를 직접 전달해서 복잡해지는 방식을 해결하기 위한 방식입니다.
+- 하지만, 그만큼 불필요한 렌더링이 발생할 수 있고 그로 인해 성능 문제가 발생할 수 있습니다.
+- `redux` 를 사용하면 별도의 저장소에서 상태를 관리하며 사실 위의 이슈를 대부분 해결할 수 있습니다.
+- 상태를 직접 관리하며 작은 단위에서 사용하고자할 때 contextAPI 를 사용할 수 있을 것 같습니다.
+
 ## 2023-03-27
 1. `npkill` 은 오래된 라이브러리를 찾아서 삭제할 수 있는 npm 패키지 입니다. <br/>
 아래 명령어를 이용하여 사용할 수 있습니다.
