--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,6 @@
+## 2023-03-29
+1. `react` 에서 `useMemo` 는 컴포넌트 최적화를 위한 훅으로 컴포넌트 함수가 렌더링될 때 불필요한 작업이 일어나지 않도록 방지해줌.
+
 ## 2023-03-28
 1. `react` 에서 `redux` 와 `contextapi` 차이
 - `contextAPI` 는 React 의 부모 컴포넌트에서 자식 컴포넌트로 데이터를 직접 전달해서 복잡해지는 방식을 해결하기 위한 방식입니다.
