--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,20 @@
+## 2023-03-30
+1. `hyvor talk` 은 웹사이트, 블로그에 통합하여 방문자가 기사 및 게시물에 댓글을 남길 수 있는 댓글 플랫폼입니다.
+2. 간단하고 사용자 친화적인 댓글 시스템을 제공하여 사용자가 서로 쉽게 토론에 참여할 수 있습니다.
+3. 현재 v2 가 상용 중이지만, v3 도 사용할 수 있음.
+
+간단한 설치 방법
+```html
+<hyvor-talk-comments 
+    website-id="YOUR_WEBSITE_ID" 
+    page-id=""
+></hyvor-talk-comments>
+
+<script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script>
+```
+4. SSO 를 지원하기 위해서는 백엔드 api 작업이 필요함.
+5. `hyvor talk` 디스코드를 지원하기 때문에 실시간 질의응답 가능.
+
 ## 2023-03-29
 1. `react` 에서 `useMemo` 는 컴포넌트 최적화를 위한 훅으로 컴포넌트 함수가 렌더링될 때 불필요한 작업이 일어나지 않도록 방지해줌.
 
