--- a/2023/03.md
+++ b/2023/03.md
@@ -1,3 +1,9 @@
+## 2023-03-31
+1. `useReducer` 는 현재 상태와 액션 객체를 전달받아 새로운 상태를 반환하는 리듀서 함수, 초기값을 인자로 받습니다.
+2. `reducer` 함수는 현재 상태와 액션 객체를 전달받아 새로운 상태를 반환하는 함수
+3. `state` 객체는 현재 상태 값, `action` 객체는 type 필드를 가지고 있으며, 해당 필드를 기반으로 리듀서 함수에서 새로운 상태값을 계산합니다. 
+4. `dispatch`는 상태를 업데이트 하기 위한 함수를 의미합니다.
+
 ## 2023-03-30
 1. `hyvor talk` 은 웹사이트, 블로그에 통합하여 방문자가 기사 및 게시물에 댓글을 남길 수 있는 댓글 플랫폼입니다.
 2. 간단하고 사용자 친화적인 댓글 시스템을 제공하여 사용자가 서로 쉽게 토론에 참여할 수 있습니다.
