nuxt 에서 모듈 추가시 에러 해결방법

--- a/2023/04.md
+++ b/2023/04.md
@@ -1,3 +1,13 @@
+## 2023-04-05
+1. nuxt 에서 모듈 import 시 `Cannot use import statement outside a module Error` 같은 오류가 발생한다면, nuxt.config.js 에서 build.transplie 에 모듈을 추가해주세요.
+```js
+module.exports = {
+  build: {
+    transpile: ['모듈']
+  }
+}
+```
+
 ## 2023-04-04
 1. `nuxt` 를 이용해서 노드 모듈을 설치한 뒤, `npm install --save net tls` 다음과 같은 모듈을 설치하라는 오류가 발생했을 때 해결 방법으로 모듈을 설치해주지 말고, 의존성 충돌 문제일 가능성이 높으므로 아래와 같이 `nuxt.config.js` 를 설정해줍니다.
 
