@vercel/ncc 사용법

--- a/2023/04.md
+++ b/2023/04.md
@@ -1,3 +1,7 @@
+## 2023-04-07
+1. `@vercel/ncc` 는 Node.js 모듈을 단일 파일로 번들링하는 도구입니다.
+해당 도구의 옵션은 (@vercel/ncc)[https://github.com/vercel/ncc] 여기서 확인할 수 있습니다.
+
 ## 2023-04-05
 1. nuxt 에서 모듈 import 시 `Cannot use import statement outside a module Error` 같은 오류가 발생한다면, nuxt.config.js 에서 build.transplie 에 모듈을 추가해주세요.
 ```js
