--- a/2023/04.md
+++ b/2023/04.md
@@ -1,3 +1,8 @@
+## 2023-04-09
+1. `Pico.css` 는 시맨틱 HTML을 위한 최소한의 CSS 프레임워크 입니다. <br/>
+참고 [Pico.css](https://picocss.com/)
+2. `head` 에 css 를 넣어서 간단하게 시맨틱 웹(프로토 웹)을 만들고 싶을 때 사용하면 됩니다. 다른 부트스트랩에 비해서 코드가 더욱 간단합니다.
+
 ## 2023-04-07
 1. `@vercel/ncc` 는 Node.js 모듈을 단일 파일로 번들링하는 도구입니다.
 해당 도구의 옵션은 [@vercel/ncc](https://github.com/vercel/ncc) 여기서 확인할 수 있습니다.
