--- a/2023/04.md
+++ b/2023/04.md
@@ -1,6 +1,10 @@
 ## 2023-04-14
 1. `nhn toast ui` 제품에서 Grid 제품을 이용하여 무료로 백오피스 화면을 개발할 수 있다. <br/>
 그리드 제품을 경험해본 사람이라면 보다 쉽게 할 수 있고, 무료이지만, 유료 못지 않은 기능을 가지고 있음.
+2. `react` 빌드시 package.json 에서 빌드 경로를 수정할 수 있음.
+```
+"build": "react-scripts build && mv build ../src/main"
+```
 
 
 https://github.com/nhn/tui.grid
