--- a/2023/04.md
+++ b/2023/04.md
@@ -1,3 +1,18 @@
+## 2023-04-17
+1. react 에서 `innerHTML` 사용방법으로는 `dangerouslySetInnerHTML` 를 사용할 수 있습니다. <br/>
+XSS 노출에 약하기 때문에 주의하셔서 사용하여야 합니다. <br/>
+
+```js
+const Heading = ({ mode = "h1", text }) => {
+  const jsx = `<${mode}>${text}</${mode}>`;
+
+  return <div dangerouslySetInnerHTML={{ __html: jsx }}></div>;
+};
+
+export default Heading;
+```
+
+
 ## 2023-04-14
 1. `nhn toast ui` 제품에서 Grid 제품을 이용하여 무료로 백오피스 화면을 개발할 수 있다. <br/>
 그리드 제품을 경험해본 사람이라면 보다 쉽게 할 수 있고, 무료이지만, 유료 못지 않은 기능을 가지고 있음.
