git index.lock 해결방법 / git actions 사용하여 배포

--- a/2023/04.md
+++ b/2023/04.md
@@ -1,3 +1,47 @@
+## 2023-04-18
+1. git 에러 중 `Another git process seems to be running in this repository` 가 나오는 문제 해결방법 
+- `index.lock` 파일에 의해 무언가 `lock` 이 걸린 문제로 `rm -f ./.git/index.lock` 명령어로 lock 파일을 지우면 해결됩니다.
+2. `git actions` 를 사용하여 master 푸쉬시 자동 빌드/배포 하는 방법
+- `root` 에서 `.github/workflows` 밑에 `deploy.yml` 파일을 만들어 줍니다.
+아래와 같이 만들게 되면, `우분투, 노드 체크아웃 및 설치 => 노드모듈을 설치 => 캐시가 있는지 확인 => 캐시 유무에 따라 설치(바뀐 부분이 있다면 설치) => 빌드` 를 따르게 된다.
+```yml
+name: Deploy
+
+on:
+  push:
+    branches: [master]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source code.
+        uses: actions/checkout@v3
+
+      - name: Setup Node v.
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+
+      - name: Confirm Cache.
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: frontend/node_modules
+          key: ${{ runner.os }}-nodemodules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-nodemodules-
+
+      - name: Install Dependencies.
+        if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+        working-directory: frontend
+        run: yarn install --frozen-lockfile
+
+      - name: Build.
+        working-directory: frontend
+        run: yarn build
+
+```
+
 ## 2023-04-17
 1. react 에서 `innerHTML` 사용방법으로는 `dangerouslySetInnerHTML` 를 사용할 수 있습니다. <br/>
 XSS 노출에 약하기 때문에 주의하셔서 사용하여야 합니다. <br/>
