크롬 익스텐션 만드는 방법

--- a/2023/04.md
+++ b/2023/04.md
@@ -1,3 +1,27 @@
+## 2023-04-20
+1. 크롬 익스텐션 만드는 방법
+ - manifest.json 및 html 생성
+ - 크롬 익스텐션 개발자 도구를 킨 다음, 만든 폴더를 올려줌.
+
+`manifest` 는 아래와 같이 주의점은 `version` 은 3을 써줘야함. 이제 2를 지원하지 않음.
+```json
+{
+  "manifest_version": 3,
+  "name": "chatgpt prompt assister",
+  "description": "chatgpt prompt assister",
+  "version": "1.0",
+  "permissions": ["tabs", "activeTab", "scripting"],
+  "action": {
+    "default_title": "Click to show an alert",
+    "default_popup": "popup.html",
+    "default_icon": "hello_jary.png"
+  },
+  "background": {
+    "service_worker": "background.js"
+  }
+}
+```
+
 ## 2023-04-18
 1. git 에러 중 `Another git process seems to be running in this repository` 가 나오는 문제 해결방법 
 - `index.lock` 파일에 의해 무언가 `lock` 이 걸린 문제로 `rm -f ./.git/index.lock` 명령어로 lock 파일을 지우면 해결됩니다.
