--- a/2023/04.md
+++ b/2023/04.md
@@ -1,3 +1,9 @@
+## 2023-04-24
+1. react v18 신기술
+`automatic batching` - `state를` 연달아서 고쳐도 리렌더링은 한 번만 발생함. 기존에는 state 변경할 때마다 리렌더링이 발생하였음. (자동으로 적용되도록 변경)
+`useTransition` - 느린 컴포넌트 성능 향상 (딜레이 처리) <br/>
+`startTransition` 안에 있는 코드 시작을 뒤로 늦춰줘서 입력은 먼저 일어나고 그 이후 컴포넌트 렌더링이 발생하여 시점을 조절하여 성능향상효과를 보여줌. <br/>
+`isPending` 은 `startTransition` 이 처리중 일 때 true 로 변함.
 ## 2023-04-20
 1. 크롬 익스텐션 만드는 방법
  - manifest.json 및 html 생성
