--- a/2023/04.md
+++ b/2023/04.md
@@ -1,4 +1,26 @@
 ## 2023-04-24
+1. `Prmoise.all` 을 사용해서 여러 개의 프로미스를 동시 (병렬)로 처리하고 배열로 반환합니다. <br/>
+이 모든 프로미스가 완료될 때까지 기다립니다.
+```js
+async function fetchUserData() {
+  const [user, posts] = await Promise.all([
+    fetchUser(),
+    fetchPosts()
+  ]);
+
+  console.log(user, posts);
+}
+
+function fetchUser() {
+  return axios.get('<https://jsonplaceholder.typicode.com/users/1>');
+}
+
+function fetchPosts() {
+  return axios.get('<https://jsonplaceholder.typicode.com/posts?userId=1>');
+}
+```
+
+## 2023-04-21
 1. react v18 신기술
 `automatic batching` - `state를` 연달아서 고쳐도 리렌더링은 한 번만 발생함. 기존에는 state 변경할 때마다 리렌더링이 발생하였음. (자동으로 적용되도록 변경)
 `useTransition` - 느린 컴포넌트 성능 향상 (딜레이 처리) <br/>
