프로미스 성능 개선 관련 내용 추가

--- a/2023/04.md
+++ b/2023/04.md
@@ -1,6 +1,7 @@
 ## 2023-04-24
 1. `Prmoise.all` 을 사용해서 여러 개의 프로미스를 동시 (병렬)로 처리하고 배열로 반환합니다. <br/>
-이 모든 프로미스가 완료될 때까지 기다립니다.
+이 모든 프로미스가 완료될 때까지 기다립니다. <br/>
+실제로 api 를 여러개 호출해야 하는 상황해서 성능이 매우 안좋아졌는데, 다음과 같이 병렬로 처리하면서 성능을 잡을 수 있었음. 
 ```js
 async function fetchUserData() {
   const [user, posts] = await Promise.all([
