EventSource 간단 설명 및 예제

--- a/2023/04.md
+++ b/2023/04.md
@@ -1,3 +1,18 @@
+## 2023-04-26
+1. `EventSource` 는 `server-sent events` (sse) 대한 웹 콘텐츠 인터페이스로 연결이 시작되면 서버로투버 들어오는 메세지들은 이벤트의 형태로 코드에 전달 됩니다.
+2. 웹소켓과 달리 `server => client` 단방향 통신으로 서버에서 메세지를 클라이언트로 push 하는 작업에 유용합니다.
+
+```js
+const messageElem = document.getElementById("message");
+const eventSource = new EventSource(url);
+
+eventSource.addEventListener("message", (event) => {
+  const message = event.data;
+  messageElem.value += message;
+});
+
+```
+
 ## 2023-04-24
 1. `Prmoise.all` 을 사용해서 여러 개의 프로미스를 동시 (병렬)로 처리하고 배열로 반환합니다. <br/>
 이 모든 프로미스가 완료될 때까지 기다립니다. <br/>
