--- a/2023/04.md
+++ b/2023/04.md
@@ -7,8 +7,12 @@ const messageElem = document.getElementById("message");
 const eventSource = new EventSource(url);
 
 eventSource.addEventListener("message", (event) => {
-  const message = event.data;
-  messageElem.value += message;
+  if (event.data === "[END]") eventSource.close();
+  else {
+    const message = JSON.parse(event.data);
+    const data = message.choices[0].delta.content || "";
+    messageElem.value += data;
+  }
 });
 
 ```
