--- a/2023/04.md
+++ b/2023/04.md
@@ -1,3 +1,25 @@
+## 2023-04-28
+1. `vue3` 기존 vue2 에서 메이저 버전이 오른 프레임워크로써 vue3 의 경우, router, vuex 등 버전을 변경해주어야함.
+2. 간단하게 vue2, vue3 의 큰 차이점은 setup 입니다.
+3. 아래 간단한 로직입니다. script 에 setup 을 이용하고 (setup() 의 경우, 가독성이 떨어진다는 이유가 있다고 함. or 소스의 양도 줄어듬.)
+```js
+<script setup>
+// 변수 선언
+const msg = 'Hello!'
+
+// 함수 선언
+function log() {
+  console.log(msg)
+}
+</script>
+
+<template>
+  <!-- 템플릿 안에서 바로 사용 가능 -->
+  <div @click="log">{{ msg }}</div>
+</template>
+```
+4. `reactive` 같이 객체만 반응형으로 만드는 것이 있고, `ref` 처럼 기존 data 처럼 움직이게 할 수 있음.
+
 ## 2023-04-26
 1. `EventSource` 는 `server-sent events` (sse) 대한 웹 콘텐츠 인터페이스로 연결이 시작되면 서버로투버 들어오는 메세지들은 이벤트의 형태로 코드에 전달 됩니다.
 2. 웹소켓과 달리 `server => client` 단방향 통신으로 서버에서 메세지를 클라이언트로 push 하는 작업에 유용합니다.
