javascript 에서 new Set() 사용하는 방법

--- a/2023/04.md
+++ b/2023/04.md
@@ -19,6 +19,21 @@ function log() {
 </template>
 ```
 4. `reactive` 같이 객체만 반응형으로 만드는 것이 있고, `ref` 처럼 기존 data 처럼 움직이게 할 수 있음.
+5. 자바스크립트에서 new Set() 은 배열과 다르게 사용되는 모든 값은 고유값 입니다.
+
+```js
+const myArray = [0, 0, 1, 1, 2, 2]
+const mySet = new Set(myArray)
+
+// Result
+{ 0, 1, 2 }
+
+// mySet.size
+3
+
+// Array.from(mySet)
+[0, 1, 2]
+```
 
 ## 2023-04-26
 1. `EventSource` 는 `server-sent events` (sse) 대한 웹 콘텐츠 인터페이스로 연결이 시작되면 서버로투버 들어오는 메세지들은 이벤트의 형태로 코드에 전달 됩니다.
