--- a/2023/05.md
+++ b/2023/05.md
@@ -1,3 +1,8 @@
+## 2023-05-08
+1. 프론트에서 에러 로그를 모니터링하는 방법이 뭐가 있을까 찾아봄.
+ - 기존에는 console 을 이용한 로그처리 방법이었음.
+ - 세미나 및 서칭 중에 `sentry.io` 로 에러 모니터링을 처리하는 방법, 에러 로그 전용 저장 공간을 만들어 시각화 작업을 통해 보여주는 방법 등이 있는 것을 확인함. 
+
 ## 2023-05-02
 1. vue3 에서 `ref` 사용시 .value 를 사용해서 값을 변경해야함.
 
