vite 기반의 react 설치 후, tailwind 설치방법

--- a/2023/05.md
+++ b/2023/05.md
@@ -1,3 +1,30 @@
+## 2023-05-12
+vite 기반의 react app 설치 방법
+```bash
+yarn create vite my-project -- --template react
+cd my-project
+```
+tailwind 설치 방법
+```bash
+yarn add tailwindcss postcss autoprefixer -D
+npx tailwindcss init -p
+```
+
+tailwind.config.js 셋팅
+```js
+/** @type {import('tailwindcss').Config} */
+export default {
+  content: [
+    "./index.html",
+    "./src/**/*.{js,ts,jsx,tsx}",
+  ],
+  theme: {
+    extend: {},
+  },
+  plugins: [],
+}
+```
+
 ## 2023-05-08
 1. 프론트에서 에러 로그를 모니터링하는 방법이 뭐가 있을까 찾아봄.
  - 기존에는 console 을 이용한 로그처리 방법이었음.
