openai api 를 이용한 예제 만들기

--- a/2023/05.md
+++ b/2023/05.md
@@ -1,5 +1,5 @@
 ## 2023-05-12
-vite 기반의 react app 설치 방법
+1. vite 기반의 react app 설치 방법
 ```bash
 yarn create vite my-project -- --template react
 cd my-project
@@ -24,6 +24,38 @@ export default {
   plugins: [],
 }
 ```
+2. openai api 를 이용하여 node.js 기반의 gpt 예제 만들기
+- openai api key 를 발급받아준다.
+- openai api 를 설치해줍니다. `yarn add openai`
+- 아래와 같이 코드를 작성해줍니다. apikey에 발급받은 키를 등록해줍니다.
+```js
+const { Configuration, OpenAIApi } = require("openai");
+
+const configuration = new Configuration({
+  apiKey: "Open AI API KEY 를 등록해주세요.",
+});
+const openai = new OpenAIApi(configuration);
+
+const testOpenAPI = async () => {
+  try {
+    const completion = await openai.createCompletion({
+      model: "gpt-3.5-turbo",
+      messages: [{ role: "user", content: "Hello!" }],
+    });
+    return completion.data.choices[0]?.text;
+  } catch (error) {
+    if (error.response) {
+      console.log(error.response.status, error.response.data);
+    } else {
+      console.log(error.message);
+    }
+  }
+};
+
+console.log(testOpenAPI());
+
+```
+- 무료 크레딧이 종료되면, `You exceeded your current quota, please check your plan and billing details.` 다음과 같은 메세지가 발생하니, 언능 해보자...
 
 ## 2023-05-08
 1. 프론트에서 에러 로그를 모니터링하는 방법이 뭐가 있을까 찾아봄.
