백엔드 배포를 위한 무료 서버(Qoddi)

--- a/2023/05.md
+++ b/2023/05.md
@@ -1,3 +1,8 @@
+## 2023-05-15
+1. 백엔드 배포를 위해 무료 서버가 필요로함. Heroku 가 유료로 변했기 때문에 다른 무료 서버를 서칭 중 Qoddi 서비스를 확인.
+2. 커스텀 도메인이 안되고 Ram 512 정도 지원해주지만, 무료면서 트래픽이 많지 않기 때문에 적절한 선택으로 확인.
+3.github 로 로그인 하고 연동가능함.
+
 ## 2023-05-12
 1. vite 기반의 react app 설치 방법
 ```bash
