--- a/2023/05.md
+++ b/2023/05.md
@@ -1,3 +1,7 @@
+## 2023-05-25
+1. 개발자 도구에 커버리지 기능. <br/>
+개발자도구 하단에 콘솔 옆에 coverage 기능이 있음. 해당 기능 누르면 페이지에서 사용하는 css, js 가 나오고 얼마나 사용하고 있는지 아니면 사용하지 않는지 알 수 있음. 이 기능을 이용하여 불필요한 파일을 제거하여 웹페이지 성능을 최적화 할 수 있음.
+
 ## 2023-05-15
 1. 백엔드 배포를 위해 무료 서버가 필요로함. Heroku 가 유료로 변했기 때문에 다른 무료 서버를 서칭 중 Qoddi 서비스를 확인.
 2. 커스텀 도메인이 안되고 Ram 512 정도 지원해주지만, 무료면서 트래픽이 많지 않기 때문에 적절한 선택으로 확인.
