--- a/2023/05.md
+++ b/2023/05.md
@@ -1,3 +1,8 @@
+## 2023-05-27
+1. ms 에서 제공하는 ai 디자인 도구 서칭 <br/>
+페이지 단위로 셋팅 해줌. 심심하면 한 번 해보면 좋을 듯. [MS 디자이너](https://designer.microsoft.com/)
+
+
 ## 2023-05-25
 1. 개발자 도구에 커버리지 기능. <br/>
 개발자도구 하단에 콘솔 옆에 coverage 기능이 있음. 해당 기능 누르면 페이지에서 사용하는 css, js 가 나오고 얼마나 사용하고 있는지 아니면 사용하지 않는지 알 수 있음. 이 기능을 이용하여 불필요한 파일을 제거하여 웹페이지 성능을 최적화 할 수 있음.
