--- a/2023/05.md
+++ b/2023/05.md
@@ -1,6 +1,8 @@
 ## 2023-05-27
 1. ms 에서 제공하는 ai 디자인 도구 서칭 <br/>
 페이지 단위로 셋팅 해줌. 심심하면 한 번 해보면 좋을 듯. [MS 디자이너](https://designer.microsoft.com/)
+2. 텍스트 기반의 ai기반의 ppt 자동 완성 [ppt 자동완성](https://www.magicslides.app/)<br/>
+
 
 
 ## 2023-05-25
